--- a/styles.css
+++ b/styles.css
@@ -56,14 +56,26 @@ header {
 }
 
 
-h1 {}
+h1 {
+  font-size: 64px;
+  margin: 0;
+  font-weight: 700;
+  letter-spacing: -2px;
+}
 
-h2 {}
+h2 {
 
-p {}
+}
+
+p {
+  font-weight: 500;
+  color: #757575;
+  margin: 8px;
+  margin-bottom: 24px;
+}
 
 a {
-  color: inherit;
+  color: #EAEAEA;
   text-decoration: none;
 }
 
@@ -71,7 +83,17 @@ a:hover {
   color: #757575;
 }
 
-.button {}
+.button {
+  border: 2px solid #EAEAEA;
+  font-weight: 500;
+  padding: 4px 16px;
+  border-radius: 24px;
+}
+
+.button:hover{
+  background-color: #EAEAEA;
+  color: #000000;
+}
 
 
 .grid {
@@ -80,10 +102,8 @@ a:hover {
   gap: 16px;
 }
 
-@media (max-width: 600px) {
-  .grid {
-      grid-template-columns: 1fr;
-  }
+.grid > div {
+  text-align: center;
 }
 
 .grid img {
@@ -95,4 +115,27 @@ a:hover {
 
 .grid img:hover {
   transform: scale(1.05);
+}
+
+.grid h2 {
+  margin: 8px 0;
+}
+
+.grid p {
+  margin: 4px 0;
+}
+
+.grid a {
+  display: inline-block;
+  margin-top: 8px;
+  text-decoration: none;
+  color: #007bff;
+}
+
+.max-width{
+  max-width: 500px;
+  background-color: rgba(255, 255, 255, 5%);
+  padding: 16px;
+  border-radius: 32px;
+  backdrop-filter: blur(4px);
 }
