--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,7 @@ h1 {
   letter-spacing: -2px;
 }
 
-h2 {
-
-}
+h2 {}
 
 p {
   font-weight: 500;
@@ -77,20 +75,21 @@ p {
 a {
   color: #EAEAEA;
   text-decoration: none;
+  transition: all 0.5s;
 }
 
 a:hover {
   color: #757575;
 }
 
-.button {
+ .button {
   border: 2px solid #EAEAEA;
   font-weight: 500;
   padding: 4px 16px;
   border-radius: 24px;
 }
 
-.button:hover{
+.button:hover {
   background-color: #EAEAEA;
   color: #000000;
 }
@@ -102,7 +101,7 @@ a:hover {
   gap: 16px;
 }
 
-.grid > div {
+.grid>div {
   text-align: center;
 }
 
@@ -129,13 +128,18 @@ a:hover {
   display: inline-block;
   margin-top: 8px;
   text-decoration: none;
-  color: #007bff;
 }
 
-.max-width{
+.max-width {
   max-width: 500px;
   background-color: rgba(255, 255, 255, 5%);
   padding: 16px;
   border-radius: 32px;
   backdrop-filter: blur(4px);
 }
+
+
+.center-content{
+  text-align: center;
+}
+
